# Sulfur

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Sulfur.sln  Sulfur.vcxproj  Sulfur.vcxproj.filters
.github/workflows/: cmake-ubuntu.yml  cmake-windows.yml
Shaders/: Shaders.hlsl  Shaders.spv  autoshaders.cmd
Shaders/SPIR-V/: Shaders.spv
Source/: Definitions.hpp  Sulfur.cpp
Source/Graphics/: GraphicsContext.cpp  GraphicsContext.hpp  IGraphicsContext.hpp
Source/Graphics/CommandBuffers/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  ICommandBuffer.hpp  ICommandPool.hpp
Source/Graphics/CommandQueues/: CommandQueue.cpp  CommandQueue.hpp  CommandQueueFamily.cpp  CommandQueueFamily.hpp  ICommandQueue.hpp  ICommandQueueFamily.hpp
Source/Graphics/Descriptors/: DescriptorLayout.cpp  DescriptorLayout.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  IDescriptorLayout.hpp  IDescriptorPool.hpp  IDescriptorSet.hpp
Source/Graphics/Devices/: IInstance.hpp  ILogicalDevice.hpp  IPhysicalDevice.hpp  Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp
Source/Graphics/Memory/: IMemoryHeap.hpp  IMemoryType.hpp  MemoryHeap.cpp  MemoryHeap.hpp  MemoryType.cpp  MemoryType.hpp
Source/Graphics/RenderPasses/: IRenderAttachment.hpp  IRenderDependency.hpp  IRenderPass.hpp  IRenderSubpass.hpp  RenderAttachment.cpp  RenderAttachment.hpp  RenderDependency.cpp  RenderDependency.hpp  RenderPass.cpp  RenderPass.hpp  RenderSubpass.cpp  RenderSubpass.hpp
Source/Graphics/Syncs/: Fence.hpp
Source/Graphics/Windows/: IMonitor.hpp  IWindow.hpp  IWindowContext.hpp  Monitor.cpp  Monitor.hpp  Window.cpp  Window.hpp  WindowContext.cpp  WindowContext.hpp  WindowSurface.cpp  WindowSurface.hpp
Source/Utils/: Utils.hpp
Source/Utils/Generics/: List.hpp
Source/Utils/Objects/: Handle.hpp  IHandle.hpp  Link.hpp  Object.hpp  Parent.hpp  ParentType.hpp  THandle.cpp  THandle.hpp  TLink.hpp  TObject.cpp  TObject.hpp
Sources/: Definitions.hpp  Sulfur.cpp
Sources/Graphics/: GraphicsContext.cpp  GraphicsContext.hpp
Sources/Graphics/CommandBuffers/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp
Sources/Graphics/CommandQueues/: CommandQueue.cpp  CommandQueue.hpp  CommandQueueFamily.cpp  CommandQueueFamily.hpp
Sources/Graphics/Descriptors/: DescriptorLayout.cpp  DescriptorLayout.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp
Sources/Graphics/Devices/: Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp
Sources/Graphics/Memory/: Memory.cpp  Memory.hpp  MemoryHeap.cpp  MemoryHeap.hpp  MemoryType.cpp  MemoryType.hpp
Sources/Graphics/Pipelines/: GraphicsPipeline.cpp  GraphicsPipeline.hpp  IPipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  Shader.cpp  Shader.hpp
Sources/Graphics/RenderPasses/: Framebuffer.cpp  Framebuffer.hpp  RenderAttachment.cpp  RenderAttachment.hpp  RenderDependency.cpp  RenderDependency.hpp  RenderPass.cpp  RenderPass.hpp  RenderSubpass.cpp  RenderSubpass.hpp
Sources/Graphics/Resources/: IResource.cpp  IResource.hpp
Sources/Graphics/Swapchains/: Swapchain.cpp  Swapchain.hpp  SwapchainTexture.cpp  WindowSurface.cpp  (+2 more)
Sources/Utils/: Utils.cpp  Utils.hpp
(+23 files in other folders)
